@@ -1,5 +1,9 @@
 2005-04-16  Mark Kettenis  <kettenis@gnu.org>
 
+	* ppcobsd-tdep.c: Include "floatformat.h".
+	(ppcobsd_init_abi): Set long_double_bit and long_double_format.
+	* Makefile.in (ppcobsd-tdep.o): Update dependencies.
+
 	* ppcobsd-tdep.c: Fix typo in comment.
 	(_initialize_ppcobsd_tdep): Register GDB_OSABI_OPENBSD_ELF for
 	bfd_arch_rs6000 too.
